# discord-economy-bot

./: .env.example  .gitignore  .replit  README.md  bot.py  config.yml  main.py  pyproject.toml  replit.nix
attached_assets/: admin.py  config.py  economy.py  main.py
cogs/: admin.py  economy.py  minecraft.py
data/: accounts.json  economy.json  minecraft.json
discord-economy-bot/: README.md
discord-economy-bot/cogs/: minecraft.py
minecraft-plugin/: README.md  dependency-reduced-pom.xml  pom.xml
minecraft-plugin/src/main/java/com/discordbot/economybridge/: EconomyBridge.java
minecraft-plugin/src/main/resources/: config.yml  plugin.yml
utils/: api_server.py  config.py  database.py  logger.py  minecraft_utils.py  permissions.py  storage.py
